objects/TestMove__c.object
<CustomObject>
    <fields>
        <fullName>AssgnOcik__c</fullName>
        <label>AssgnOcik</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestGlobalPick__c</fullName>
        <label>TestGlobalPick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TestGlobalPick</valueSetName>
        </valueSet>
    </fields>
    <label>TestMove</label>
    <nameField>
        <label>TestMove Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestMoves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>